# appening

./: .gitignore  404.html  MANIFEST.in  Makefile  README.md  cookiecutter.json  index.html  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml
contributing/: index.html
faq/: index.html
hooks/: post_gen_project.py
installation/: index.html
pypackage/: index.html
search/: search_index.json
tests/: test_bake_project.py
usage/: index.html
{{cookiecutter.github_repo_name}}/: Makefile  pyproject.toml  {{cookiecutter.app_id}}.desktop  {{cookiecutter.app_id}}.metainfo.xml  {{cookiecutter.app_id}}.yml
{{cookiecutter.github_repo_name}}/{{cookiecutter.project_slug}}/: main.py  {{cookiecutter.project_slug}}.py
